# Introduction-to-programming

./: .gitignore  CMakeLists.txt  Introduction-to-programming.sln  LICENSE  README.md
src/: Euclids_algorithm.cpp  NewtonMethod.cpp  a_stack.cpp  array_reverse_order_order.cpp  array_reverse_order_until_EOF.cpp  average.cpp  bigger_line_segment_with_smaller_line_segment.cpp  binary_number.cpp  bubble_sort.cpp  change_letter_case.cpp  compare_two_numbers_by_their_digit.cpp  convert_symbol_fraction.cpp  convert_symbol_to_integer.cpp  convert_symbol_to_number.cpp  difference_two_integers.cpp  digits_in_number.cpp  digits_of_number.cpp  division.cpp  divisors_number.cpp  factorial.cpp  fast_euclid.cpp  fibonacci.cpp  find_repeated_elements.cpp  form_even_numbers_sequence.cpp  four_digits_number_palindrome.cpp  greatest_devisor.cpp  helloworld.cpp  insert_to_array.cpp  is_number_polindrome.cpp  least_divisor.cpp  linear_equation.cpp  lucky_ticket.cpp  merge_two_sorted_array.cpp  min_odd_max_even.cpp  move_zeros_to_right_of_array.cpp  odd_number.cpp  oddity_of_number.cpp  perimeter_area_of_square.cpp  point_belongs_to_circumference.cpp  procedure_sum_two_numbers.cpp  (+20 more)
src/FindSubstringInformHHMM/: FindSubstringInformHHMM.csproj  Program.cs  input.txt
src/RegularExpressions.Tasks/: FindCorrectArithmeticExpressions.cs  FindCorrectAssignmentStatements.Part1.cs  FindCorrectAssignmentStatements.Part2.cs  FindCorrectAssignmentStatements.Part3.cs  FindCorrectAssignmentStatements.Part4.cs  FindCorrectDates.cs  FindSubstringInformHHMM.cs  RegularExpressions.Tasks.csproj
