cmake_minimum_required(VERSION 3.13)
project(Introduction_to_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(helloworld src/helloworld.cpp)
add_executable(sum_of_two_integers src/sum_of_two_integers.cpp)
add_executable(move_zeros_to_right_of_array src/move_zeros_to_right_of_array.cpp)
add_executable(a_stack src/a_stack.cpp)
add_executable(binary_number src/binary_number.cpp)
add_executable(difference_two_numbers src/difference_two_integers.cpp)
add_executable(divison src/division.cpp)
add_executable(linear_eq src/linear_equation.cpp)
add_executable(odd_number src/odd_number.cpp)
add_executable(perimeter_area_sqr src/perimeter_area_of_square.cpp)
add_executable(product_two_int src/product_two_integers.cpp)
add_executable(remainder src/remainder.cpp)
add_executable(sort_three_numbers src/sort_three_numbers_ascendingly.cpp)
add_executable(split_number src/split_three_digit_number.cpp)
add_executable(square src/square_of_number.cpp)
add_executable(swap_two_numbers src/swap_two_numbers_without_third_variable.cpp)