cmake_minimum_required(VERSION 3.12)
project(Introduction_to_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(helloworld src/helloworld.cpp)
add_executable(sum_of_two_integers src/sum_of_two_integers.cpp)
add_executable(move_zeros_to_right_of_array src/move_zeros_to_right_of_array.cpp)
add_executable(binary_number src/binary_number.cpp)
add_executable(difference_two_numbers src/difference_two_integers.cpp)
add_executable(divison src/division.cpp)
add_executable(linear_eq src/linear_equation.cpp)
add_executable(odd_number src/odd_number.cpp)
add_executable(perimeter_area_sqr src/perimeter_area_of_square.cpp)
add_executable(product_two_int src/product_two_integers.cpp)
add_executable(remainder src/remainder.cpp)
add_executable(sort_three_numbers src/sort_three_numbers_ascendingly.cpp)
add_executable(split_number src/split_three_digit_number.cpp)
add_executable(square src/square_of_number.cpp)
add_executable(swap_two_numbers src/swap_two_numbers_without_third_variable.cpp)
add_executable(min_odd_max_even src/min_odd_max_even.cpp)
add_executable(insert_to_array src/insert_to_array.cpp)
add_executable(remove_duplicates_in_array src/remove_duplicates_in_array.cpp)
add_executable(move_zeros_right_array src/move_zeros_to_right_of_array.cpp)
add_executable(divisors_number src/divisors_number.cpp)
add_executable(remove_element_array src/remove_element_array.cpp)
add_executable(fast_euclid src/fast_euclid.cpp)
add_executable(vocabulary_of_words src/vocabulary_of_words.cpp)
add_executable(newton src/NewtonMethod.cpp)