cmake_minimum_required(VERSION 3.12)
project(Introduction_to_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(helloworld src/helloworld.cpp)
add_executable(sum_of_two_integers src/sum_of_two_integers.cpp)
add_executable(move_zeros_to_right_of_array src/move_zeros_to_right_of_array.cpp)
add_executable(binary_number src/binary_number.cpp)
add_executable(difference_two_numbers src/difference_two_integers.cpp)
add_executable(divison src/division.cpp)
add_executable(linear_eq src/linear_equation.cpp)
add_executable(odd_number src/odd_number.cpp)
add_executable(perimeter_area_sqr src/perimeter_area_of_square.cpp)
add_executable(product_two_int src/product_two_integers.cpp)
add_executable(remainder src/remainder.cpp)
add_executable(sort_three_numbers src/sort_three_numbers_ascendingly.cpp)
add_executable(split_number src/split_three_digit_number.cpp)
add_executable(square src/square_of_number.cpp)
add_executable(swap_two_numbers src/swap_two_numbers_without_third_variable.cpp)
add_executable(min_odd_max_even src/min_odd_max_even.cpp)
add_executable(insert_to_array src/insert_to_array.cpp)
add_executable(remove_duplicates_in_array src/remove_duplicates_in_array.cpp)
add_executable(move_zeros_right_array src/move_zeros_to_right_of_array.cpp)
add_executable(divisors_number src/divisors_number.cpp)
add_executable(remove_element_array src/remove_element_array.cpp)
add_executable(fast_euclid src/fast_euclid.cpp)
add_executable(vocabulary_of_words src/vocabulary_of_words.cpp)
add_executable(newton src/NewtonMethod.cpp)
add_executable(reverse_array src/array_reverse_order_order.cpp)
add_executable(reverse_array_eof src/array_reverse_order_until_EOF.cpp)
add_executable(avg src/average.cpp)
add_executable(line_segments src/bigger_line_segment_with_smaller_line_segment.cpp)
add_executable(bubble_sort src/bubble_sort.cpp)
add_executable(change_letter_case src/change_letter_case.cpp)
add_executable(compare_2_numbers src/compare_two_numbers_by_their_digit.cpp)
add_executable(to_fraction src/convert_symbol_fraction.cpp)
add_executable(to_integer src/convert_symbol_to_integer.cpp)
add_executable(to_number src/convert_symbol_to_number.cpp)
add_executable(fibonacci src/fibonacci.cpp)
add_executable(euclid src/Euclids_algorithm.cpp)
add_executable(find_repeated_elements src/find_repeated_elements.cpp)
add_executable(factorial src/factorial.cpp)
add_executable(form_even_numbers_seq src/form_even_numbers_sequence.cpp)
add_executable(four_digits_numbers_sequence src/four_digits_number_palindrome.cpp)
add_executable(four_figits_polindrome src/four_digits_number_palindrome.cpp)
add_executable(greatest_divisor src/greatest_devisor.cpp)
add_executable(digits_in_number src/digits_in_number.cpp)
add_executable(digits_of_number src/digits_of_number.cpp)
add_executable(oddity src/oddity_of_number.cpp)
add_executable(point_belongs_to_circumference src/point_belongs_to_circumference.cpp)
add_executable(sort_sequence src/sort_sequence.cpp)
add_executable(split_number_digits src/split_number_digits.cpp)
add_executable(sum_array_k_to_m src/sum_array_k_to_m.cpp)
add_executable(sum_even_numbers src/sum_of_even_numbers_sequance.cpp)
add_executable(three_digits_number_different src/three_digits_number_are_different.cpp)
add_executable(weekdays src/weekdays.cpp)
add_executable(out_even_odd src/write_even_odd_elements.cpp)
add_executable(symbol_by_index src/write_symbol_by_index.cpp)
add_executable(symbol_index src/write_symbols_index.cpp)
add_executable(lucky_ticket src/lucky_ticket.cpp)
add_executable(merge_two_sorted_array src/merge_two_sorted_array.cpp)
add_executable(number_polidrome src/is_number_polindrome.cpp)
add_executable(least_divisor src/least_divisor.cpp)
